--- a/python_05.ipynb
+++ b/python_05.ipynb
@@ -732,18 +732,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "618ffb8f-77a8-48ac-855d-42900bfacaa8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 16, 25]\n"
+     ]
+    }
+   ],
    "source": [
     "numbers=[1,2,3,4,5]\n",
     "square=[]\n",
     "\n",
     "for i in numbers:\n",
     "    if i>=3:\n",
-    "        square.append(i**2)"
+    "        square.append(i**2)\n",
+    "print(square)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "5684366e-6827-4cb3-96bf-a715345aa672",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 16, 25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers=[1,2,3,4,5]\n",
+    "square=[i**2 for i in numbers if i>=3]\n",
+    "\n",
+    "print(square)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14d17fa3-7243-45ce-9a13-218397deffdb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
