Feat: 함수,입출력,파일읽고쓰기,

--- a/python_06.ipynb
+++ b/python_06.ipynb
@@ -1278,70 +1278,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "bf7f2178-b989-4fec-a683-57bde6b356a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "숫자를 입력하세요:  20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "당신이 입력한 숫자는20입니다. \n"
+     ]
+    }
+   ],
    "source": [
     "num=input(\"숫자를 입력하세요: \")\n",
-    "print(\"당신이 입력한 숫자는{}입니다. "
+    "print(\"당신이 입력한 숫자는{}입니다. \".format(num))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ed3cc2f-b4e7-4208-94a1-e1b9659041a1",
+   "metadata": {},
+   "source": [
+    "# 실습문제"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "11a06988-3fb8-4785-aa1f-1737b96af59d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c193cb86-1c46-4218-8695-b18bf78db327",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "이름을 입력하세요 jenny\n",
+      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 60 80 88\n",
+      "이름을 입력하세요 lisa\n",
+      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 60 77 99\n",
+      "이름을 입력하세요 luna\n",
+      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 66 88 77\n",
+      "이름을 입력하세요 lay\n",
+      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 44 77 55\n",
+      "이름을 입력하세요 kai\n",
+      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 66 99 88 99\n",
+      "이름을 입력하세요 끝\n",
+      "누구의 정보를 보고싶어요? jenny\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'jenny학생 정보: 학생의 따른 평균은 69.5이고 전체평균은 71.15 과목별 최대점수는 88이고 과목별 최소점수는 50입니다.'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student={}\n",
+    "while True:\n",
+    "    name=input(\"이름을 입력하세요\")\n",
+    "    if name == \"끝\":\n",
+    "        break\n",
+    "    kor,math,eng,science=map(int,input(\"국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요\").split())\n",
+    "    score=[kor,math,eng,science]\n",
+    "    student[name]=score\n",
+    "\n",
+    "choice=input(\"누구의 정보를 보고싶어요?\")\n",
+    "\n",
+    "def student_add(**kwargs): \n",
+    "    avg=(sum(student[choice]))/4\n",
+    "    sum_num=0\n",
+    "    sum_len=0\n",
+    "    for i in student.values():\n",
+    "        for j in i:\n",
+    "            sum_num+=j\n",
+    "            sum_len+=1\n",
+    "\n",
+    "    total_avg=(sum_num/sum_len)       \n",
+    "            \n",
+    "    \n",
+    "    max_sub=max(student[choice])\n",
+    "    min_sub=min(student[choice])\n",
+    "    return f\"{choice}학생 정보: 학생의 따른 평균은 {avg}이고 전체평균은 {total_avg} 과목별 최대점수는 {max_sub}이고 과목별 최소점수는 {min_sub}입니다.\"\n",
+    "\n",
+    "    \n",
+    "        \n",
+    "    \n",
+    "student_add(student=choice)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4eb2cacf-7483-41d4-ae4a-c0ebe8d894dc",
+   "execution_count": 10,
+   "id": "ad3f9c9f-d38b-43d6-a92c-0ac3d4421616",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'jenny': [50, 60, 80, 88],\n",
+       " 'lisa': [50, 60, 77, 99],\n",
+       " 'luna': [50, 66, 88, 77],\n",
+       " 'lay': [50, 44, 77, 55],\n",
+       " 'kai': [66, 99, 88, 99]}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "92058b63-710c-46ce-9308-6352a8915cfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([[50, 60, 80, 88], [50, 60, 77, 99], [50, 66, 88, 77], [50, 44, 77, 55], [66, 99, 88, 99]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "722b68b7-99aa-462a-9d2a-f38bf0ea0355",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7c7a31d2-dd53-4008-b78f-b4c751cefcd7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"C:\\Sesac_Workspace\\sesac_python_workspace\\student_score.txt\",'w') as f:\n",
+    "    for key,value in student.items():\n",
+    "        f.write(\"{}  {}  {}  {}  {}\\n\".format(key,value[0],value[1],value[2],value[3]))\n",
+    "                \n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
+   "id": "bbc15373-5721-47ef-aa0d-8fec2e0aa1e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jenny ['50', '60', '80', '88']\n",
+      "lisa ['50', '60', '77', '99']\n",
+      "luna ['50', '66', '88', '77']\n",
+      "lay ['50', '44', '77', '55']\n",
+      "kai ['66', '99', '88', '99']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"C:\\Sesac_Workspace\\sesac_python_workspace\\student_score.txt\",'r') as f:\n",
+    "    lines=f.readlines()\n",
+    "\n",
+    "for line in lines:\n",
+    "    name,*score=line.split()\n",
+    "    scores=list(map(int,score))\n",
+    "    mean=sum(score)/4\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "40682939-fcd2-4a3d-ba33-0f2af4614efa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "정사각형 한 변의 길이는?:  20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정사각형의 넓이: 400\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=input(\"정사각형 한 변의 길이는?: \")\n",
+    "area=int(a) **2\n",
+    "print(\"정사각형의 넓이: {}\".format(area))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "aaf38d7b-f93e-486f-81af-ae56a482c9d0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "정사각형 한 변의 길이는?: 20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "정사각형의 넓이: 400.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "b=input(\"정사각형 한 변의 길이는?:\")\n",
+    "area=float(b) **2\n",
+    "print(\"정사각형의 넓이: {}\".format(area))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "id": "04066f24-3f9d-45a1-9c0a-2df0cdca7829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!cd C:\\"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "951e5e13-7b2e-4d9a-b2f7-2599813693d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\myPyCode\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd C:\\myPyCode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "id": "5abffdcc-6013-4ca1-9152-e079feaf2946",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f=open('myFile.txt','w')\n",
+    "f.write('This is my first file.')\n",
+    "f.close()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "504ef743-1a6c-441a-82bf-bd6143d961c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is my first file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "f=open('myFile.txt','r')\n",
+    "file_text=f.read()\n",
+    "f.close()\n",
+    "print(file_text)"
+   ]
   },
   {
    "cell_type": "code",
@@ -1349,7 +1614,9 @@
    "id": "b3cd32e1-8084-489a-96b5-f53346646efe",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f=open("
+   ]
   },
   {
    "cell_type": "code",
