Feat: 입력과 출력

--- a/python_06.ipynb
+++ b/python_06.ipynb
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "c193cb86-1c46-4218-8695-b18bf78db327",
    "metadata": {},
    "outputs": [
@@ -1321,15 +1321,15 @@
      "output_type": "stream",
      "text": [
       "이름을 입력하세요 jenny\n",
-      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 60 88 99\n",
+      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 60 70 80\n",
       "이름을 입력하세요 kai\n",
-      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 60 77 88\n",
+      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 60 80 99\n",
       "이름을 입력하세요 lay\n",
-      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 60 99 99\n",
+      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 77 88 99\n",
       "이름을 입력하세요 kei\n",
-      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 50 55 88 99\n",
-      "이름을 입력하세요 karina\n",
-      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 80 90 99 99\n",
+      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 88 99 88 100\n",
+      "이름을 입력하세요 luna\n",
+      "국어 수학 영어 과학 점수를 차례대로 띄어서 입력하세요 88 99 99 99\n",
       "이름을 입력하세요 끝\n",
       "누구의 정보를 보고싶어요? jenny\n"
      ]
@@ -1337,10 +1337,10 @@
     {
      "data": {
       "text/plain": [
-       "'jenny학생 정보: 학생의 따른 평균은 74.25이고 전체평균은 77.0 과목별 최대점수는 99이고 과목별 최소점수는 50입니다.'"
+       "'jenny학생 정보: 학생의 따른 평균은 65.0이고 전체평균은 81.15 과목별 최대점수는 80이고 과목별 최소점수는 50입니다.'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1381,21 +1381,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "ad3f9c9f-d38b-43d6-a92c-0ac3d4421616",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'jenny': [50, 60, 80, 88],\n",
-       " 'lisa': [50, 60, 77, 99],\n",
-       " 'luna': [50, 66, 88, 77],\n",
-       " 'lay': [50, 44, 77, 55],\n",
-       " 'kai': [66, 99, 88, 99]}"
+       "{'jenny': [50, 60, 70, 80],\n",
+       " 'kai': [50, 60, 80, 99],\n",
+       " 'lay': [50, 77, 88, 99],\n",
+       " 'kei': [88, 99, 88, 100],\n",
+       " 'luna': [88, 99, 99, 99]}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1406,17 +1406,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "92058b63-710c-46ce-9308-6352a8915cfb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_values([[50, 60, 80, 88], [50, 60, 77, 99], [50, 66, 88, 77], [50, 44, 77, 55], [66, 99, 88, 99]])"
+       "dict_values([[50, 60, 70, 80], [50, 60, 80, 99], [50, 77, 88, 99], [88, 99, 88, 100], [88, 99, 99, 99]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "722b68b7-99aa-462a-9d2a-f38bf0ea0355",
    "metadata": {},
    "outputs": [
@@ -1437,7 +1437,7 @@
        "5"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "7c7a31d2-dd53-4008-b78f-b4c751cefcd7",
    "metadata": {},
    "outputs": [],
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 89,
    "id": "bbc15373-5721-47ef-aa0d-8fec2e0aa1e7",
    "metadata": {},
    "outputs": [
@@ -1469,33 +1469,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jenny  50  60  80  90\n",
-      "\n",
-      "kai  50  60  70  80\n",
-      "\n",
-      "lay  60  60  60  60\n",
-      "\n",
-      "luna  50  80  99  99\n",
-      "\n",
-      "kei  54  88  99  100\n",
-      "\n"
+      "{'jenny': 65, 'kai': 72.25, 'lay': 78.5, 'kei': 93.75, 'luna': 96.25}\n",
+      "81.15 100 50\n"
      ]
     }
    ],
    "source": [
-    "with open(\"C:\\Sesac_Workspace\\sesac_python_workspace\\student_score.txt\",'r') as f:\n",
-    "    lines=f.readlines()\n",
+    "from statistics import mean\n",
+    "file_path = \"C:\\Sesac_Workspace\\sesac_python_workspace\\student_score.txt\"\n",
     "\n",
-    "for line in lines:\n",
-    "    name,score=\n",
-    "    \n",
+    "students = {}\n",
+    "all_scores=[]\n",
+    "\n",
+    "with open(file_path, 'r', encoding='utf-8') as f: \n",
+    "    for line in f:\n",
+    "        line=line.strip()\n",
+    "        if not line:\n",
+    "            continue\n",
+    "        parts=line.split()\n",
+    "        name=parts[0]\n",
+    "        scores=list(map(int,parts[1:]))\n",
     "        \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "        # 이제 딕셔너리에 name을 키로 사용하여 scores를 저장할 수 있습니다.\n",
+    "        students[name]=scores\n",
+    "        all_scores.extend(scores)\n",
     "\n",
-    "\n"
+    "\n",
+    "per_student_avg={name:mean(scores) for name,scores in students.items()}\n",
+    "overall_avg=mean(all_scores)\n",
+    "\n",
+    "\n",
+    "print(per_student_avg) # 결과 확인용\n",
+    "print(overall_avg, overall_max, overall_min) # 결과 확인용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "dbe17638-8b95-4c26-bb4f-932718f4f7c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['jenny', '50', '60', '70', '80'], ['kai', '50', '60', '80', '99'], ['lay', '50', '77', '88', '99'], ['kei', '88', '99', '88', '100'], ['luna', '88', '99', '99', '99']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)\n"
    ]
   },
   {
